Fixed and then subsquently broke (visibility) the Player List.

--- a/static/style.css
+++ b/static/style.css
@@ -82,3 +82,13 @@ h4 {
 span {
 	font-weight: 100;
 }
+
+input[type="checkbox"]:checked ~ .moreinfo {
+	display: block;
+	visibility: visible;
+}
+
+.moreinfo {
+	display: none;
+	visibility: hidden;
+}
